--- a/LastResort/LastResort.vcxproj
+++ b/LastResort/LastResort.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{6A7A6179-D472-49E6-B659-1A789BDAAD12}</ProjectGuid>
     <RootNamespace>LastResort</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <ProjectName>BattleArena</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
