--- a/Lab00/Lab00.vcxproj
+++ b/Lab00/Lab00.vcxproj
@@ -37,7 +37,7 @@
     <ProjectGuid>{020B2C4B-075B-4265-A962-0227F68BCEB0}</ProjectGuid>
     <RootNamespace>Lab00</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
-    <ProjectName>MarvelVsMarvel</ProjectName>
+    <ProjectName>Lab00</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
